--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="empty">
             <img id="playerHand" src="/images/player_rock.png" alt="rock" width="200px" height="200px">
             <img id="comHand" src="/images/com_rock.png" alt="computer rock" width="200px" height="200px">
-            <p id="Congrats">Com Wins Overall!</p>
+            <p id="Congrats"></p>
             <!-- <p id="comCongrats">Com Wins Overall!</p> -->
         </div>
         <div class="buttons">
