--- a/New folder (4)/Rock_Paper_Scissors-Augustine/index.html
+++ b/New folder (4)/Rock_Paper_Scissors-Augustine/index.html
@@ -9,9 +9,7 @@
     <link rel="stylesheet" href="/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Montserrat+Alternates:wght@400;700&family=Montserrat+Subrayada:wght@700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Montserrat+Alternates:wght@400;700&family=Montserrat+Subrayada:wght@700&display=swap" rel="stylesheet">
 
 </head>
 
@@ -22,7 +20,7 @@
             <img id="playerHand" src="/images/player_rock.png" alt="rock" width="200px" height="200px">
             <img id="comHand" src="/images/com_rock.png" alt="computer rock" width="200px" height="200px">
             <p id="Congrats"></p>
-
+            <!-- <p id="comCongrats">Com Wins Overall!</p> -->
         </div>
         <div class="buttons">
             <button id="rock">Rock</button>
@@ -32,6 +30,7 @@
         <div id="results"></div>
         <div id="playerPoints"></div>
         <div id="comPoints"></div>
+        <!-- <button id="playAgain" onclick="playAgain()">Play Again</button> -->
     </div>
 
 
